--- a/huellaProto/huellaProto/Views/ListaProyectosPage.xaml
+++ b/huellaProto/huellaProto/Views/ListaProyectosPage.xaml
@@ -3,7 +3,7 @@
     x:Class="huellaProto.Views.ListaProyectosPage"
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    Title="Vehículos"
+    Title="Mis proyectos"
     BindingContext="{Binding Main, Source={StaticResource Locator}}">
     <ContentPage.Content>
         <StackLayout BindingContext="{Binding ListaProyectos}">
@@ -14,26 +14,22 @@
                 IsRefreshing="{Binding IsRefreshing, Mode=TwoWay}"
                 ItemsSource="{Binding Proyectos}"
                 RefreshCommand="{Binding RefreshCommand}"
+                SelectedItem="{Binding SelectedItem}"
                 SeparatorVisibility="None">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell>
-                            <Frame
-                                Margin="5"
-                                CornerRadius="20"
-                                HasShadow="true">
+                            <Frame Margin="2">
 
-                                <Frame.GestureRecognizers>
-                                    <TapGestureRecognizer Command="{Binding SelectPaisCommand}" />
-                                </Frame.GestureRecognizers>
+                                <!--<frame.gesturerecognizers>
+                                    <tapgesturerecognizer command="{binding selectpaiscommand}" />
+                                </frame.gesturerecognizers>-->
 
                                 <Grid>
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition Width="*" />
                                         <ColumnDefinition Width="auto" />
-
                                         <ColumnDefinition Width="Auto" />
-
                                     </Grid.ColumnDefinitions>
 
                                     <!--<ffimageloading:CachedImage
@@ -44,18 +40,63 @@
                                     </ffimageloading:CachedImage>-->
 
                                     <StackLayout Grid.Column="0" VerticalOptions="Center">
-                                        <Label
-                                            FontAttributes="Bold"
-                                            FontSize="Medium"
-                                            Text="{Binding Toneledas}"
-                                            TextColor="Black" />
-                                        <Label Text="{Binding Zona}" TextColor="Black" />
+                                        <StackLayout
+                                            Margin="0,0,0,5"
+                                            HorizontalOptions="Center"
+                                            Orientation="Horizontal">
+                                            <Label
+                                                FontAttributes="Bold"
+                                                FontSize="Medium"
+                                                Text="Proyecto: "
+                                                TextColor="Black" />
+                                            <Label
+                                                FontAttributes="Bold"
+                                                FontSize="Medium"
+                                                Text="{Binding Index}"
+                                                TextColor="Black" />
+                                        </StackLayout>
+                                        <StackLayout Orientation="Horizontal">
+                                            <Label
+                                                FontAttributes="Bold"
+                                                Text="Toneladas CO2:"
+                                                TextColor="Black" />
+                                            <Label Text="{Binding Toneledas}" TextColor="Black" />
+                                        </StackLayout>
+                                        <StackLayout Orientation="Horizontal">
+                                            <Label
+                                                FontAttributes="Bold"
+                                                Text="Zona siembra:"
+                                                TextColor="Black" />
+                                            <Label Text="{Binding Zona}" TextColor="Black" />
+                                        </StackLayout>
+                                        <StackLayout Orientation="Horizontal">
+                                            <Label
+                                                FontAttributes="Bold"
+                                                Text="Tipo de árbol:"
+                                                TextColor="Black" />
+                                            <Label Text="{Binding TipoArbol}" TextColor="Black" />
+                                        </StackLayout>
+                                        <StackLayout Orientation="Horizontal">
+                                            <Label
+                                                FontAttributes="Bold"
+                                                Text="Porcentaje a compensar:"
+                                                TextColor="Black" />
+                                            <Label Text="{Binding Porcentaje}" TextColor="Black" />
+                                        </StackLayout>
+                                        <StackLayout Orientation="Horizontal">
+                                            <Label
+                                                FontAttributes="Bold"
+                                                Text="Estado:"
+                                                TextColor="Black" />
+                                            <Label Text="{Binding Estado1}" TextColor="Black" />
+                                        </StackLayout>
                                     </StackLayout>
 
                                     <Image
                                         Grid.Column="1"
                                         HorizontalOptions="End"
-                                        Source="ic_chevron_right" />
+                                        Source="Arbol"
+                                        WidthRequest="60" />
 
                                 </Grid>
                             </Frame>
